--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,8 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-         <script  src="js/app/app.js"></script>       
-       <script  src="js/app/lib.js"></script>  
+        <script data-main="js/main" src="js/lib/require.js"></script>       
     </head>
     <body>
         <!--[if lt IE 8]>
