--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,8 +13,16 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-         <script  src="js/app/app.js"></script>       
-       <script  src="js/app/lib.js"></script>  
+        <script type="text/javascript">
+            function submitName(){
+            var firstName = document.getElementById('firstName');
+            var lastName = document.getElementById('lastName');
+            var fullName = document.getElementById('fullName');
+            if (firstName && firstName.value.length > 0 && lastName && lastName.value.length >0){
+                fullName.innerText = firstName.value + ', ' + lastName.value;
+            }    
+        }
+         </script>         
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -25,8 +33,7 @@
         
         <input id="firstName" placeholder="Enter first name" />
         <input id="lastName" placeholder="Enter last name" />
-        <button id="submitName" value="submitName" title="Submit" onclick="lib.submitName()">lib/Submit</button>
-        <button id="submitName" value="submitName" title="Submit" onclick="app.submitName()">app/Submit</button>
+        <button id="submitName" value="submitName" title="Submit" onclick="submitName()">Submit</button>
         <label id="fullNameLabel" title="fullname" style="display: block">Full Name: </label>
         <span id="fullName"></span>
 
