--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,8 +25,7 @@
         
         <input id="firstName" placeholder="Enter first name" />
         <input id="lastName" placeholder="Enter last name" />
-        <button id="submitName" value="submitName" title="Submit" onclick="lib.submitName()">lib/Submit</button>
-        <button id="submitName" value="submitName" title="Submit" onclick="app.submitName()">app/Submit</button>
+        <button id="submitName" value="submitName" title="Submit" onclick="submitName()">Submit</button>
         <label id="fullNameLabel" title="fullname" style="display: block">Full Name: </label>
         <span id="fullName"></span>
 
